Final additions before deploy

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,7 +16,8 @@
     {
       "src": "./icons/icon-maskable-192x192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "maskable"
     },
     {
       "src": "./icons/icon-512x512.png",
@@ -26,7 +27,8 @@
     {
       "src": "./icons/icon-maskable-512x512.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "maskable"
     }
   ],
   "start_url": ".",
